# Face-Sorter

./: CMakeLists.txt  Media-Organizer.cpp  Media-Organizer.h
